Fix Layout Issue

--- a/html5up-phantom/assets/css/main.css
+++ b/html5up-phantom/assets/css/main.css
@@ -2753,102 +2753,102 @@
 				/*background-color: #8499e7;*/
 			/*}*/
 
-			body:not(.is-touch) .tiles article:hover > .image {
-				-moz-transform: scale(1.1);
-				-webkit-transform: scale(1.1);
-				-ms-transform: scale(1.1);
-				transform: scale(1.1);
-			}
+			/*body:not(.is-touch) .tiles article:hover > .image {*/
+				/*-moz-transform: scale(1.1);*/
+				/*-webkit-transform: scale(1.1);*/
+				/*-ms-transform: scale(1.1);*/
+				/*transform: scale(1.1);*/
+			/*}*/
 
-				body:not(.is-touch) .tiles article:hover > .image:before {
-					background-color: #333333;
-					opacity: 0.35;
-				}
+				/*body:not(.is-touch) .tiles article:hover > .image:before {*/
+					/*background-color: #333333;*/
+					/*opacity: 0.35;*/
+				/*}*/
 
-				body:not(.is-touch) .tiles article:hover > .image:after {
-					opacity: 0;
-				}
+				/*body:not(.is-touch) .tiles article:hover > .image:after {*/
+					/*opacity: 0;*/
+				/*}*/
 
-			body:not(.is-touch) .tiles article:hover .content {
-				max-height: 15em;
-				opacity: 1;
-			}
+			/*body:not(.is-touch) .tiles article:hover .content {*/
+				/*max-height: 15em;*/
+				/*opacity: 1;*/
+			/*}*/
 
-		* + .tiles {
-			margin-top: 2em;
-		}
+		/** + .tiles {*/
+			/*margin-top: 2em;*/
+		/*}*/
 
-		body.is-loading .tiles article {
-			-moz-transform: scale(0.9);
-			-webkit-transform: scale(0.9);
-			-ms-transform: scale(0.9);
-			transform: scale(0.9);
-			opacity: 0;
-		}
+		/*body.is-loading .tiles article {*/
+			/*-moz-transform: scale(0.9);*/
+			/*-webkit-transform: scale(0.9);*/
+			/*-ms-transform: scale(0.9);*/
+			/*transform: scale(0.9);*/
+			/*opacity: 0;*/
+		/*}*/
 
-		body.is-touch .tiles article .content {
-			max-height: 15em;
-			opacity: 1;
-		}
+		/*body.is-touch .tiles article .content {*/
+			/*max-height: 15em;*/
+			/*opacity: 1;*/
+		/*}*/
 
-		@media screen and (max-width: 1280px) {
+		/*@media screen and (max-width: 1280px) {*/
 
-			.tiles {
-				margin: -1.25em 0 0 -1.25em;
-			}
+			/*.tiles {*/
+				/*margin: -1.25em 0 0 -1.25em;*/
+			/*}*/
 
-				.tiles article {
-					width: calc(33.33333% - 1.25em);
-					margin: 1.25em 0 0 1.25em;
-				}
+				/*.tiles article {*/
+					/*width: calc(33.33333% - 1.25em);*/
+					/*margin: 1.25em 0 0 1.25em;*/
+				/*}*/
 
-		}
+		/*}*/
 
-		@media screen and (max-width: 980px) {
+		/*@media screen and (max-width: 980px) {*/
 
-			.tiles {
-				margin: -2.5em 0 0 -2.5em;
-			}
+			/*.tiles {*/
+				/*margin: -2.5em 0 0 -2.5em;*/
+			/*}*/
 
-				.tiles article {
-					width: calc(50% - 2.5em);
-					margin: 2.5em 0 0 2.5em;
-				}
+				/*.tiles article {*/
+					/*width: calc(50% - 2.5em);*/
+					/*margin: 2.5em 0 0 2.5em;*/
+				/*}*/
 
-		}
+		/*}*/
 
-		@media screen and (max-width: 736px) {
+		/*@media screen and (max-width: 736px) {*/
 
-			.tiles {
-				margin: -1.25em 0 0 -1.25em;
-			}
+			/*.tiles {*/
+				/*margin: -1.25em 0 0 -1.25em;*/
+			/*}*/
 
-				.tiles article {
-					width: calc(50% - 1.25em);
-					margin: 1.25em 0 0 1.25em;
-				}
+				/*.tiles article {*/
+					/*width: calc(50% - 1.25em);*/
+					/*margin: 1.25em 0 0 1.25em;*/
+				/*}*/
 
-					.tiles article:hover > .image {
-						-moz-transform: scale(1.0);
-						-webkit-transform: scale(1.0);
-						-ms-transform: scale(1.0);
-						transform: scale(1.0);
-					}
+					/*.tiles article:hover > .image {*/
+						/*-moz-transform: scale(1.0);*/
+						/*-webkit-transform: scale(1.0);*/
+						/*-ms-transform: scale(1.0);*/
+						/*transform: scale(1.0);*/
+					/*}*/
 
-		}
+		/*}*/
 
-		@media screen and (max-width: 480px) {
+		/*@media screen and (max-width: 480px) {*/
 
-			.tiles {
-				margin: 0;
-			}
+			/*.tiles {*/
+				/*margin: 0;*/
+			/*}*/
 
-				.tiles article {
-					width: 100%;
-					margin: 1.25em 0 0 0;
-				}
+				/*.tiles article {*/
+					/*width: 100%;*/
+					/*margin: 1.25em 0 0 0;*/
+				/*}*/
 
-		}
+		/*}*/
 
 /* Header */
 
