--- a/source/_patterns/02-molecules/box-thumbnail/_box-thumbnail.scss
+++ b/source/_patterns/02-molecules/box-thumbnail/_box-thumbnail.scss
@@ -1,10 +1,3 @@
-// Block Class - Default Wrapper AKA tiles article
-.box-thumbnail {
-  display: block;
-}
-
-// Element Classes
-
 // Article Styles AKA .tiles article
 .box-thumbnail__article {
   -moz-transition: -moz-transform 0.5s ease, opacity 0.5s ease;
@@ -16,77 +9,8 @@
   margin: 2.5em 0 0 2.5em;
 }
 
-// Link Style AKA .tiles article > a
-.box-thumbnail__link {
-  display: -moz-flex;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -moz-flex-direction: column;
-  -webkit-flex-direction: column;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -moz-align-items: center;
-  -webkit-align-items: center;
-  -ms-align-items: center;
-  align-items: center;
-  -moz-justify-content: center;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  justify-content: center;
-  -moz-transition: background-color 0.5s ease, -moz-transform 0.5s ease;
-  -webkit-transition: background-color 0.5s ease, -webkit-transform 0.5s ease;
-  -ms-transition: background-color 0.5s ease, -ms-transform 0.5s ease;
-  transition: background-color 0.5s ease, transform 0.5s ease;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  padding: 1em;
-  border-radius: 4px;
-  border-bottom: 0;
-  color: #ffffff;
-  text-align: center;
-  text-decoration: none;
-  z-index: 3;
-}
-
-.box-thumbnail__link:last-child {
-  margin: 0;
-}
-
-.box-thumbnail__link:hover {
-  color: #ffffff;
-}
-
-// Title AKA .tiles article > a h2
-.box-thumbnail__title {
-  margin: 0;
-}
-
-// Content AKA .tiles article > a .content
-.box-thumbnail__content {
-  -moz-transition: max-height 0.5s ease, opacity 0.5s ease;
-  -webkit-transition: max-height 0.5s ease, opacity 0.5s ease;
-  -ms-transition: max-height 0.5s ease, opacity 0.5s ease;
-  transition: max-height 0.5s ease, opacity 0.5s ease;
-  width: 100%;
-  max-height: 0;
-  line-height: 1.5;
-  margin-top: 0.35em;
-  opacity: 0;
-}
-
-.box-thumbnail__content:last-child {
-  margin-bottom: 0;
-}
-
-
-
-
 // Image Styles AKA .tiles article > .image
-.box-thumbnail__span {
+.box-thumbail__article > .box-thumbnail__span {
   -moz-transition: -moz-transform 0.5s ease;
   -webkit-transition: -webkit-transform 0.5s ease;
   -ms-transition: -ms-transform 0.5s ease;
@@ -147,6 +71,72 @@
   background-size: 100% 100%;
   opacity: 0.25;
   z-index: 2;
+}
+
+// Link Style AKA .tiles article > a
+.box-thumbnail__article > .box-thumbnail__link {
+  display: -moz-flex;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -moz-flex-direction: column;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -moz-align-items: center;
+  -webkit-align-items: center;
+  -ms-align-items: center;
+  align-items: center;
+  -moz-justify-content: center;
+  -webkit-justify-content: center;
+  -ms-justify-content: center;
+  justify-content: center;
+  -moz-transition: background-color 0.5s ease, -moz-transform 0.5s ease;
+  -webkit-transition: background-color 0.5s ease, -webkit-transform 0.5s ease;
+  -ms-transition: background-color 0.5s ease, -ms-transform 0.5s ease;
+  transition: background-color 0.5s ease, transform 0.5s ease;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 1em;
+  border-radius: 4px;
+  border-bottom: 0;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  z-index: 3;
+}
+
+.box-thumbnail__article > .box-thumbnail__link > :last-child {
+  margin: 0;
+}
+
+.box-thumbnail__article > .box-thumbnail__link:hover {
+  color: #ffffff !important;
+}
+
+// Title AKA .tiles article > a h2
+.box-thumbnail__article > .box-thumbnail__title {
+  margin: 0;
+}
+
+// Content AKA .tiles article > a .content
+.box-thumbnail__content {
+  -moz-transition: max-height 0.5s ease, opacity 0.5s ease;
+  -webkit-transition: max-height 0.5s ease, opacity 0.5s ease;
+  -ms-transition: max-height 0.5s ease, opacity 0.5s ease;
+  transition: max-height 0.5s ease, opacity 0.5s ease;
+  width: 100%;
+  max-height: 0;
+  line-height: 1.5;
+  margin-top: 0.35em;
+  opacity: 0;
+}
+
+.box-thumbnail__article > .box-thumbnail__content:last-child {
+  margin-bottom: 0;
 }
 
 // Modifier Classes
@@ -212,63 +202,4 @@ body.is-loading .box-thumbnail__article {
 body.is-touch .box-thumbnail__article .box-thumbnail__content {
   max-height: 15em;
   opacity: 1;
-}
-
-@media screen and (max-width: 1280px) {
-
-  .box-thumbnail {
-    margin: -1.25em 0 0 -1.25em;
-  }
-
-  .box-thumbnail__article {
-    width: calc(33.33333% - 1.25em);
-    margin: 1.25em 0 0 1.25em;
-  }
-
-}
-
-@media screen and (max-width: 980px) {
-
-  .box-thumbnail {
-    margin: -2.5em 0 0 -2.5em;
-  }
-
-  .box-thumbnail__article {
-    width: calc(50% - 2.5em);
-    margin: 2.5em 0 0 2.5em;
-  }
-
-}
-
-@media screen and (max-width: 736px) {
-
-  .box-thumbnail {
-    margin: -1.25em 0 0 -1.25em;
-  }
-
-  .box-thumbnail__article {
-    width: calc(50% - 1.25em);
-    margin: 1.25em 0 0 1.25em;
-  }
-
-  .box-thumbnail__article:hover > .image {
-    -moz-transform: scale(1.0);
-    -webkit-transform: scale(1.0);
-    -ms-transform: scale(1.0);
-    transform: scale(1.0);
-  }
-
-}
-
-@media screen and (max-width: 480px) {
-
-  .box-thumbnail {
-    margin: 0;
-  }
-
-  .box-thumbnail__article {
-    width: 100%;
-    margin: 1.25em 0 0 0;
-  }
-
 }
